# airflow-learning

./: .gitignore  .pre-commit-config.yaml  .pylintrc  pyproject.toml  requirements.txt
.astro/: config.yaml  test_dag_integrity_default.py
airflow_learning/dags/daily_fake_data/: daily_fake_data_dag.py
airflow_learning/dags/daily_fake_data/tasks/: data_ingestion.py
airflow_learning/include/utils/: env_utils.py
dags/: cleaner_dag.py  example-dag-basic.py  great_expectation_dag.py  simple_dag.py
dags/daily_fake_data/: daily_fake_data_dag.py
dags/daily_fake_data/tasks/: data_ingestion.py  xcom_cleaner.py
dags/daily_pokemon_data/: daily_pokemon_data_dag.py
dags/daily_pokemon_data/tasks/: data_ingestion.py  data_quality.py
dags/tasks/: etl_tasks.py
include/utils/: env_utils.py  logger_utils.py
src/dags/daily_fake_data/tasks/: data_ingestion.py
src/include/utils/: env_utils.py
src/tests/include/utils/: test_env_utils.py
tests/dags/: test_dag_integrity.py
tests/include/utils/: test_env_utils.py
tests/operators/: test_great_expectations.py
