[tool.poetry]
name = "airflow-learning"
version = "0.1.0"
description = "A project to apply some of airflow good practices."
authors = ["Bruno Dantas <bruno.dantas@poli.ufrj.br>"]
keywords = ["airflow", "good practices"]

[tool.poetry.dependencies]
python = "~=3.10"
toml = "^0.9"
apache-airflow = "2.3.3"
types-requests = "^2.28.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.20.0"
black = "^22.6.0"
flake8 = "^5.0.4"
mypy = "^0.971"
pylint = "2.14.5"
commitizen = "^2.29.5"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
